profile page text can be modified via script

--- a/learningApp/app/src/main/res/layout/fragment_home.xml
+++ b/learningApp/app/src/main/res/layout/fragment_home.xml
@@ -24,7 +24,7 @@
         android:layout_marginStart="36dp"
         android:layout_marginLeft="36dp"
         android:layout_marginTop="34dp"
-        android:text="<name>"
+        android:text="name"
         android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/avatar"
         app:layout_constraintTop_toTopOf="parent" />
@@ -36,7 +36,7 @@
         android:layout_marginStart="36dp"
         android:layout_marginLeft="36dp"
         android:layout_marginTop="4dp"
-        android:text="<school>"
+        android:text="school"
         android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/avatar"
         app:layout_constraintTop_toBottomOf="@+id/major" />
@@ -48,7 +48,7 @@
         android:layout_marginStart="36dp"
         android:layout_marginLeft="36dp"
         android:layout_marginTop="4dp"
-        android:text="<major>"
+        android:text="major"
         android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/avatar"
         app:layout_constraintTop_toBottomOf="@+id/classification" />
@@ -60,7 +60,7 @@
         android:layout_marginStart="36dp"
         android:layout_marginLeft="36dp"
         android:layout_marginTop="4dp"
-        android:text="<classification>"
+        android:text="classification"
         android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/avatar"
         app:layout_constraintTop_toBottomOf="@+id/name" />
@@ -111,7 +111,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginLeft="40dp"
         android:layout_marginTop="20dp"
-        android:text="<wip_list>"
+        android:text="wip_list"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/courseWIP" />
@@ -136,7 +136,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginLeft="40dp"
         android:layout_marginTop="20dp"
-        android:text="<recommendedCourses_list>"
+        android:text="recommendedCourses_list"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recommendedCourses" />
